@@ -1,4 +1,4 @@
-# last modified 2011-11-27 by J. Fox
+# last modified 2012-02-28 by J. Fox
 
 export(
     basicPowerAxis,
