@@ -3,6 +3,8 @@ Changes to Version 2.0-13
     o Minor changes to the returned value of showLabels to give both the label and the corresponding row number.  showLabels documentation tweaked.
 
     o Improved handling of center.pch argument to ellipse() (suggestion of Rob Kushler).
+    
+    o New test argument for linearHypothesis.mer()  and test.statistic argument for Anova.mer() for F-tests with Kenward/Roger df, provided by pbkrtest package.
 
 Changes to Version 2.0-12
 
